fix margin photo and align social media

--- a/src/scss/layout/_principal.scss
+++ b/src/scss/layout/_principal.scss
@@ -168,7 +168,7 @@
   width: 18rem;
   height: 18rem;
   overflow: hidden;
-  margin-top: 45px;
+  /*margin-top: 45px;*/
   border: 5px solid lightgrey;
   border-radius: 6%;
 
@@ -211,8 +211,13 @@
   margin-top: 15px;
   font-size: 2rem;
   @media (min-width: 768px) {
-    justify-content: flex-end;
+    justify-content: flex-end;        
   }
+}
+
+.cris{
+    @media (min-width: 768px){
+    justify-content: flex-start;}
 }
 
 .icon::after {
